--- a/Good.tex
+++ b/Good.tex
@@ -1,4 +1,4 @@
-% Created 2018-01-30 Tue 11:36
+% Created 2018-01-30 Tue 14:39
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -14,11 +14,14 @@
 \usepackage{marvosym}
 \usepackage{wasysym}
 \usepackage{amssymb}
-\usepackage{hyperref}
 \tolerance=1000
-\usepackage{minted}
-\usepackage{float}
+\usepackage[pdftex]{hyperref}
+\usepackage[pdftex]{insdljs}
 \newcommand{\aDE}[4]{\begin{center}\begin{equation}\label{#4}\frac{{dy(t)}}{{dt}} -#1y(t) = #2u(t),y(0) = #3 \end{equation}\end{center}}
+\newcommand\tugHello{Hello World!}
+\begin{insDLJS}{mydljs}{My Private DLJS}
+function HelloWorld() { app.alert("\tugHello", 3); }
+\end{insDLJS}
 \author{Changyuan Lin}
 \date{\today}
 \title{Test}
@@ -30,8 +33,6 @@
 
 \maketitle
 \tableofcontents
-
-
 
 \section{Chapter 1}
 \label{sec-1}
@@ -147,16 +148,13 @@ Solution:
 \[\boxed{ \nonumber  \tau = 1, \quad \tau_{d} = 0\Rightarrow \Delta t = (0.1\sim0.2)1\tau = 0.1\sim 0.2}\]
 \end{itemize}
 
-\begin{minted}[]{elisp}
-(expand-file-name
-	     "ditaa.jar"
-      (file-name-as-directory
-	    (expand-file-name
-		"scripts"
-	       (file-name-as-directory
-		  (expand-file-name
-		      "../contrib"
-		     (file-name-directory (org-find-library-dir "org")))))))
-\end{minted}
+\section{Chapter 2}
+\label{sec-2}
+\subsection{JavaScript}
+\label{sec-2-1}
+\begin{Form} % a hyperref environment, needed for \PushButton
+% use built in form button of hyperref
+Push \PushButton[name=myButton,onclick={HelloWorld();}]{Button}
+\end{Form}
 % Emacs 25.3.1 (Org mode 8.2.10)
 \end{document}
